--- a/main/app/sprinkles/core/assets/SiteAssets/css/main.css
+++ b/main/app/sprinkles/core/assets/SiteAssets/css/main.css
@@ -1,7 +1,3 @@
-svg path {
-    fill: green;
-}
-
 /******
 GENERAL
 ******/
@@ -107,7 +103,7 @@ HEADER
 GENERAL TABS
 ***********/
 .MainInTab {
-    height: 100%
+    height: 100%;
 }
 
 /**********
