--- a/main/app/sprinkles/core/templates/pages/index.html.twig
+++ b/main/app/sprinkles/core/templates/pages/index.html.twig
@@ -49,8 +49,8 @@
                         <div id="ChatMessages" class="ChatMessages">
                             <!-- Messages -->
                         </div>
-                        <input title="Type your message..." id="ChatTextInput" class="ChatInput" type="text"/>
-                        <input title="Join a group..." id="SubscribeTextInput" class="ChatInput" type="text"/>
+                        <input title="Type your message..." placeholder="Type your message..." id="ChatTextInput" class="ChatInput" type="text"/>
+                        <input title="Join a group..." placeholder="Join a group..." id="SubscribeTextInput" class="ChatInput" type="text"/>
                 </div>
             </div>
 
@@ -100,7 +100,7 @@
             <img draggable="false" ondragstart="return false;" src="{{ assets.url('assets://SiteAssets/icons/ExploreGlobeOutline.svg') }}">
         </span>
             <span id="2" class="NavbarIconWrap ActiveTab">
-            <img draggable="false" ondragstart="return false;" src="{{ assets.url('assets://SiteAssets/icons/MessageBubbleOutline.svg') }}">
+            <img draggable="false" ondragstart="return false;" src="{{ assets.url('assets://SiteAssets/icons/MessageBubbleOutlineActivated.svg') }}">
         </span>
             <span id="3" class="NavbarIconWrap">
             <img draggable="false" ondragstart="return false;" src="{{ assets.url('assets://SiteAssets/icons/UserGroupOutline.svg') }}">
