--- a/main/app/sprinkles/core/templates/pages/partials/favicons.html.twig
+++ b/main/app/sprinkles/core/templates/pages/partials/favicons.html.twig
@@ -11,12 +11,12 @@
     IE 10 Metro tile icon (Metro equivalent of apple-touch-icon-precomposed)
     (see https://github.com/audreyr/favicon-cheat-sheet)
 #}
-<meta name="msapplication-TileColor" content="#603cba">
+<meta name="msapplication-TileColor" content="#0c1d34">
 <meta name="msapplication-TileImage" content="{{ assets.url('assets://userfrosting/favicons/mstile-144x144.png') }}">
 
 {# IE 11 Tile for Windows 8.1 Start Screen #}
-<meta name="application-name" content="UserFrosting">
-<meta name="msapplication-tooltip" content="A secure, modern user management system for PHP.">
+<meta name="application-name" content="BEAM-Messenger">
+<meta name="msapplication-tooltip" content="A secure, fast and simple messenger.">
 <meta name="msapplication-config" content="{{ assets.url('assets://userfrosting/favicons/ieconfig.xml') }}">
 
 {# Apple touch icons #}
@@ -33,7 +33,7 @@
 {# Chrome icons and manifest #}
 <link rel="icon" type="image/png" sizes="192x192" href="{{ assets.url('assets://userfrosting/favicons/android-chrome-192x192.png') }}">
 <link rel="manifest" href="{{ assets.url('assets://userfrosting/favicons/manifest.json') }}">
-<meta name="theme-color" content="#f3f2e4">
+<meta name="theme-color" content="#0c1d34">
 
 {# Safari pinned sites icons #}
 <link rel="mask-icon" href="{{ assets.url('assets://userfrosting/favicons/safari-pinned-tab.svg') }}" color="#f39ca1">
