--- a/main/app/sprinkles/core/templates/pages/index.html.twig
+++ b/main/app/sprinkles/core/templates/pages/index.html.twig
@@ -53,7 +53,7 @@
                         <span class="HeaderCaption">{{ translate("TAB_CAPTIONS.CHAT") }}</span>
                         <span class="RightButtonHeader"><i class="fas fa-bell"></i></span>
                     </div>
-                    <hr>
+                    <hr class="ChatHeaderDivider">
                 </div>
                 <div class="MainInTab ChatWindow">
                     <div id="ChatMessages" class="ChatMessages">
