Added many security/verifying things for image upload

--- a/main/app/sprinkles/core/templates/pages/test.html.twig
+++ b/main/app/sprinkles/core/templates/pages/test.html.twig
@@ -1,19 +1,8 @@
-<form method="post" enctype="multipart/form-data" action="{{site.uri.public}}/api/posts/image">
+<form method="post" action="{{ site.uri.public }}/api/posts/image">
     {% include "forms/csrf.html.twig" %}
     <p>
-        <label>Add file (single): </label><br/>
-        <input type="file" name="example1"/>
+        <label>Upload file:</label><br/>
+        <input formenctype="multipart/form-data" type="file" name="image"/>
     </p>
-    <p>
-        <label>Add files (up to 2): </label><br/>
-        <input type="file" name="example2[]"/><br/>
-        <input type="file" name="example2[]"/>
-    </p>
-    <p>
-        <label>Add files (multiple): </label><br/>
-        <input type="file" name="example3[]" multiple="multiple"/>
-    </p>
-    <p>
-        <input type="submit"/>
-    </p>
+    <input formenctype="multipart/form-data" type="submit"/>
 </form>
